# M33-Sound-Locator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix
analysis/: FIR_filter.py  domain_plotter.py  phase_shift.py  plane_accuracy_plot.py
analysis/17125-Home/: data_set_references.md
analysis/17125-Home/FM_BF60/: BUZ-P15x60.csv  BUZ-P20x20.csv  BUZ-P30x60.csv  BUZ-P50x60.csv  BUZ-P60x50.csv  BUZ-P70x20.csv  BUZ-P70x60.csv  data_set_props.json
analysis/17125-Home/FM_BF600/: BUZ-P20x20.csv  BUZ-P30x60.csv  BUZ-P70x60.csv  data_set_props.json
analysis/17125-Home/FM_BF6000/: BUZ-P20x20.csv  BUZ-P50x40.csv  BUZ-P50x60.csv  BUZ-P70x40.csv
analysis/17125_measurements/: SerialPort_configuration.ini
analysis/17125_measurements/FM_BF60/: BUZ-P40x30.csv  BUZ-P50x40.csv  BUZ-P70x40.csv
analysis/17125_measurements/FM_BF600/: BUZ-P50x40.csv  BUZ-P70x30.csv
analysis/17125_measurements/FM_BF6000/: BUZ-P20x60.csv  BUZ-P70x20.csv  data_set_props.json
analysis/24125-Accuracy/: computed_results_with_ground_truth.csv  results.csv
analysis/24125-Atlas/: P0x50.csv  P0x50_long-duration.csv  P0x50_short-duration.csv  P20x35.csv  P20x50.csv  P20x60.csv  P25x-5.csv  P25x0.csv  P25x25.csv  P25x50.csv  P45x5.csv  P55x-5.csv  data_set_props.json  phase_shift.py
config/: FreeRTOSConfig.h  board_defines.h  freertos_config.cmake
docs/: matlab_sim.m
docs/BuzzerTest/: buzzer_frequencies.csv  buzzer_volume.csv  buzzer_width.csv
docs/design_graphics/: v1.0-PCB_pinout.drawio
drivers/: CMakeLists.txt  adc_driver.hpp  adc_driver_dma.hpp  adc_driver_interface.hpp  adc_driver_irq.hpp  adc_sample_distributor.hpp  adc_sensor_interface.hpp  button_detector.hpp  buzzer.hpp  circular_buffer.hpp  microphone_sensor.hpp  system_references.hpp
electrical-mechnical-rsc/microphone_amplifier/: AmplifierModel.asc  AmplifierModel.op.raw  AmplifierModel.raw
electrical-mechnical-rsc/microphone_holder/: TUe2425_M33-SL-MicrophoneHolder v2.f3d
electrical-mechnical-rsc/production-3D_printing/: v2-0_microphone-holder.3mf  v2-0_microphone-holder.stl  v2-0_microphone-holder_0.15mm_PLA_MK3SMMU2S_2h5m.gcode.txt
examples/: adc_sampling.hpp  adc_sampling_dma.hpp  buzzer_on_button.hpp
models/: localization_estimation_model.m
models/Amplifier/: AmplifierModel.asc
src/: CMakeLists.txt  SampleProcessor.cpp  SampleProcessor.h  algorithm.cpp  locator.cpp  locator.hpp  main.cpp  main.hpp  preprocessor_fir.hpp  preprocessor_interface.hpp
testing/: CMakeLists.txt  fft_spectrum_detection.hpp  locator_determination.hpp  main_testing.cpp  sampling_logging.hpp
